<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="title">My Nanodegree Apps!</string>
    <string name="title_spotify">SPOTIFY STREAMER</string>
    <string name="title_scores">SCORES APP</string>
    <string name="title_library">LIBRARY APP</string>
    <string name="title_bigger">BUILD IT BIGGER</string>
    <string name="title_xyzreader">XYZ READER</string>
    <string name="title_capstone">CAPSTONE: VOLUNTEER FIREMAN\'S VALET</string>
</resources>
