<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp">

            <TextView
                android:text="@string/title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textSize="20sp"
                />

            <Button
                android:layout_marginTop="50dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_spotify"
                android:layout_centerHorizontal="true"
                android:background="@color/orange"
                android:id="@+id/buttonSpotify"
            />

            <Button
                android:layout_marginTop="20dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_scores"
                android:layout_centerHorizontal="true"
                android:background="@color/orange"
                android:id="@+id/buttonScores"
                />

            <Button
                android:layout_marginTop="20dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_library"
                android:layout_centerHorizontal="true"
                android:background="@color/orange"
                android:id="@+id/buttonLibrary"
                />

            <Button
                android:layout_marginTop="20dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_bigger"
                android:layout_centerHorizontal="true"
                android:background="@color/orange"
                android:id="@+id/buttonBigger"
                />

            <Button
                android:layout_marginTop="20dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_xyzreader"
                android:layout_centerHorizontal="true"
                android:background="@color/orange"
                android:id="@+id/buttonXYZReader"
                />

            <Button
                android:layout_marginTop="20dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_capstone"
                android:layout_centerHorizontal="true"
                android:background="@color/red"
                android:id="@+id/buttonCapstone"
                />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
